Refactor Action enum and AuthService to simplify connection handling and remove unused fields